# Wii-Tac-Toe

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.txt  CMakeLists.txt  CMakePresets.json  Makefile  README.md  build.bat  wii-tac-toe.pnproj
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: ci.yml
Wii-Tac-Toe/: boot.elf  meta.xml
audio/: button_rollover.h  button_rollover.raw  screen_change.h  screen_change.raw  tic-tac.h  tic_tac.it  tic_tac.mod
fonts/: Swis721_Ex_BT.cpp  Swis721_Ex_BT.h  button_text.h  font1.h
gfx/: backg.h  button_home.h  button_off.h  button_on.h  game.h  hand.h  hand_o.h  hand_x.h  home_button.h  hover.h  hover_o.h  hover_x.h  o.h  player1_point.h  player2_point.h  splash.h  x.h
languages/: dutch.h  dutch.xml  english.h  english.xml  french.h  french.xml  german.h  german.xml  italian.h  italian.xml  japanese.xml  spanish.h  spanish.xml
source/: audio.cpp  audio.h  button.cpp  button.h  cursor.cpp  cursor.h  game.cpp  game.h  grid.cpp  grid.h  grrlib_class.cpp  grrlib_class.h  language.cpp  language.h  main.cpp  main.h  object.cpp  object.h  player.cpp  player.h  sound.cpp  sound.h  symbol.cpp  symbol.h  tools.cpp  tools.h  types.h  voice.cpp  voice.h
source/freetype/: ft2build.h
source/freetype/freetype/config/: ftmodule.h  ftoption.h
source/grrlib/: GRRLIB.c  GRRLIB.h  GRRLIB_3D.c  GRRLIB_addon.c  GRRLIB_bmf.c  GRRLIB_bmfx.c  GRRLIB_core.c  GRRLIB_fbAdvanced.c  GRRLIB_fileIO.c  GRRLIB_print.c  GRRLIB_render.c  GRRLIB_snapshot.c  GRRLIB_texEdit.c  GRRLIB_ttf.c
source/grrlib/grrlib/: GRRLIB__inline.h  GRRLIB__lib.h  GRRLIB_addon.h  GRRLIB_settings.h  GRRLIB_texSetup.h
source/libjpeg/: jconfig.h
source/libpng/pngu/: pngu.c
source/mxml/: config.h
